# DeepLearning

./: .gitignore  README.md  main.py  paper.txt  pyproject.toml
configs/: __init__.py  chebykan_experiment.yaml  config.yaml  config_loader.py  fourierkan_experiment.yaml  glm_experiment.yaml  smoke_experiment.yaml  smoke_test_chebykan.yaml  xgb_experiment.yaml  xgboost_paper_experiment.yaml
docs/: CHANGELOG.md  missing_data_handling.md  preprocessing_doc.md
scripts/: bootstrap_qwk_table1.py  build_figure1_interpretability.py  build_figure3_waterfall.py  interpretable_kan_no_layernorm.py  interpretable_kan_search.py  interpretable_kan_search_v2.py  kan_vs_gam_search.py  plot_input_to_output_formulas.py  plot_interpretability_suite.py  plot_kan_vs_gam.py  plot_network_diagram.py  plot_network_diagram_v2.py  plot_network_diagram_v3.py  run_narrow_experiment.py  simplified_closed_forms_table.py  sparse_hero_lambda_scan.py  worked_greek_applicant_55728.py  xgb_gamma_sweep.py
src/: __init__.py  evaluate.py  submit.py  sweep.py  train.py
sweeps/: best_config.json  bsplinekan_best.json  chebykan_best.json  fourierkan_best.json  mlp_best.json  stage-c-chebykan-pareto-sparsity_pareto_trial009.yaml  stage-c-chebykan-pareto-sparsity_pareto_trial012.yaml  stage-c-chebykan-pareto-sparsity_pareto_trial019.yaml  stage-c-chebykan-pareto-sparsity_pareto_trial029.yaml  stage-c-chebykan-top20-tune_best.json  stage-c-chebykan-top20-tune_best.yaml  stage-c-chebykan-top20-tune_candidates.json  stage-c-fourierkan-pareto-sparsity_pareto.json  stage-c-fourierkan-top20-tune_best.json  (+15 more)
(+340 files in other folders)
